test/ill-formed/unsupported/bitwise_or.py
x = 5 | 3
print(x)  # PurePy: ill-formed (bitwise | not in PurePy); Python: 7
